--- a/zaima/ZaimaModel.html
+++ b/zaima/ZaimaModel.html
@@ -358,37 +358,146 @@ the child of a <code><a data-link-type="element" href="#elementdef-chant" id="re
 <p>The <code><a data-link-type="element" href="#elementdef-notation" id="ref-for-elementdef-notation-2">notation</a></code> element marks the notation line component of a chant notation. When it is
 the descendant of a <code><a data-link-type="element" href="#elementdef-chant" id="ref-for-elementdef-chant-7">chant</a></code> element,
 it does not <a data-link-type="dfn" href="https://www.w3.org/TR/html51/dom.html#represent" id="ref-for-represent-4">represent</a> anything itself, but its ancestor <code>chant</code> element uses it as part of determining what <em>it</em> <a data-link-type="dfn" href="https://www.w3.org/TR/html51/dom.html#represent" id="ref-for-represent-5">represents</a>.</p>
-<p>An <code><a data-link-type="element" href="#elementdef-notation" id="ref-for-elementdef-notation-3">notation</a></code> element that is not a descendant of a <code><a data-link-type="element" href="#elementdef-chant" id="ref-for-elementdef-chant-9">chant</a></code> element <a data-link-type="dfn" href="https://www.w3.org/TR/html51/dom.html#represent" id="ref-for-represent-6">represents</a> the same thing as its children.</p>
+<p>An <code><a data-link-type="element" href="#elementdef-notation" id="ref-for-elementdef-notation-3">notation</a></code> element that is not a descendant of a <code><a data-link-type="element" href="#elementdef-chant" id="ref-for-elementdef-chant-8">chant</a></code> element <a data-link-type="dfn" href="https://www.w3.org/TR/html51/dom.html#represent" id="ref-for-represent-6">represents</a> the same thing as its children.</p>
 
 <p>The <code>notation</code> element has the same role as the <code>rt</code> element in Ruby annotation.</p>
 </section>
 
 <section>
 <h3 class="element-header" id="the-notationGroup-element">The <dfn><code>notationGroup</code></dfn> element</h3>
+<dl class="element">
+  <dt><span>Categories:</span></dt>
+  <dd><span>None.</span></dd>
+  <dt><span>Contexts in which this element can be used:</span></dt>
+  <dd><span>As a child of a <code><a data-link-type="element" href="#elementdef-chant" id="ref-for-elementdef-chant-18">chant</a></code> element.</span></dd>
+  <dt><span>Content model:</span></dt>
+  <dd><span>Phrasing content</span></dd>
+  <dt><span>Content attributes:</span></dt>
+  <dd><span>Global attributes</span></dd>
+  <dt><span>DOM interface:</span></dt>
+  <dd>Uses <code>HTMLElement</code>.</dd>
+</dl>
+<p>An <code><a data-link-type="element" href="#elementdef-notationGroup" id="ref-for-elementdef-notationGroup-3">notationGroup</a></code> element that is not a child of a <code><a data-link-type="element" href="#elementdef-chant" id="ref-for-elementdef-chant-19">chant</a></code> element <a data-link-type="dfn" href="https://www.w3.org/TR/html51/dom.html#represent" id="ref-for-represent-3">represents</a> the same thing as its children.</p>
 </section>
 
 <section>
 <h3 class="element-header" id="the-group-element">The <dfn><code>group</code></dfn> element</h3>
+<dl class="element">
+  <dt><span>Categories:</span></dt>
+  <dd><span>None.</span></dd>
+  <dt><span>Contexts in which this element can be used:</span></dt>
+  <dd><span>As a child of a <code><a data-link-type="element" href="#elementdef-notationGroup" id="ref-for-elementdef-notationGroup-2">notationGroup</a></code> element.</span></dd>
+  <dt><span>Content model:</span></dt>
+  <dd><span>Phrasing content</span></dd>
+  <dt><span>Content attributes:</span></dt>
+  <dd><span>Global attributes</span></dd>
+  <dt><span>DOM interface:</span></dt>
+  <dd>Uses <code>HTMLElement</code>.</dd>
+</dl>
+<p>An <code><a data-link-type="element" href="#elementdef-group" id="ref-for-elementdef-group-2">group</a></code> element that is not a child of a <code><a data-link-type="element" href="#elementdef-notationGroup" id="ref-for-elementdef-notationGroup-4">notationGroup</a></code> element <a data-link-type="dfn" href="https://www.w3.org/TR/html51/dom.html#represent" id="ref-for-represent-3">represents</a> the same thing as its children.</p>
 </section>
 
 <section>
-<h3 class="element-header" id="the-ntation-beit">The <dfn><code>beit</code></dfn> element</h3>
-<p>beit as a stylized reference marker -has scope, needs boundary markers similar to &lt;section&gt;</p>
+<h3 class="element-header" id="the-beit-element">The <dfn><code>beit</code></dfn> element</h3>
+<dl class="element">
+  <dt><span>Categories:</span></dt>
+  <dd><span>None.</span></dd>
+  <dt><span>Contexts in which this element can be used:</span></dt>
+  <dd><span>As a child of a <code><a data-link-type="element" href="#elementdef-chant" id="ref-for-elementdef-chant-9">chant</a></code> element.</span></dd>
+  <dt><span>Content model:</span></dt>
+  <dd><span>Flow content</span></dd>
+  <dd><span>Phrasing content</span></dd>
+  <dd><span>Palpable content.</span></dd>
+  <dt><span>Content attributes:</span></dt>
+  <dd><span>Global attributes</span></dd>
+  <dt><span>DOM interface:</span></dt>
+  <dd>Uses <code>HTMLElement</code>.</dd>
+</dl>
+<p>The <code><a data-link-type="element" href="#elementdef-beit" id="ref-for-elementdef-beit-2">beit</a></code> element marks the scope
+of the <em>Beit (ቤት)</em> context of a portion of Zaima chant. The Zaima Beit context is given with an identifier that is the abbreviation
+of a full name of the Beit.  The identifier will appear in the left side margin of the chant text adjacent to the first line where the context
+begins. The abbreviation text may be stylized and will appear within the required
+<code><a data-link-type="element" href="#elementdef-beit" id="ref-for-elementdef-marker-1">marker</a></code> child element. The full name of
+the beit will then be given in the optional child
+<code><a data-link-type="element" href="#elementdef-dfn" id="ref-for-elementdef-dfn-1">dfn</a></code> 
+element which should not appear in the document (<code>display: none</code>). The web author is left to decide how to display the full name of
+the beit.</p>
+<p>A <code><a data-link-type="element" href="#elementdef-beit" id="ref-for-elementdef-beit-3">beit</a></code> element that is not a child of a <code><a data-link-type="element" href="#elementdef-chant" id="ref-for-elementdef-chant-10">chant</a></code> element <a data-link-type="dfn" href="https://www.w3.org/TR/html51/dom.html#represent" id="ref-for-represent-3">represents</a> the same thing as its children.</p>
 </section>
 
 <section>
-<h3 class="element-header" id="the-ntation-medgam">The <dfn><code>medgam</code></dfn> element</h3>
+<h3 class="element-header" id="the-marker-element">The <dfn><code>marker</code></dfn> element</h3>
+<dl class="element">
+  <dt><span>Categories:</span></dt>
+  <dd><span>None.</span></dd>
+  <dt><span>Contexts in which this element can be used:</span></dt>
+  <dd><span>As a child of a <code><a data-link-type="element" href="#elementdef-beit" id="ref-for-elementdef-beit-4">beit</a></code>,
+      <code><a data-link-type="element" href="#elementdef-medgam" id="ref-for-elementdef-medgam-2">medgam</a></code> or
+      <code><a data-link-type="element" href="#elementdef-haleita" id="ref-for-elementdef-haleita-2">haleita</a></code>
+      element.</span></dd>
+  <dt><span>Content model:</span></dt>
+  <dd><span>Phrasing content</span></dd>
+  <dt><span>Content attributes:</span></dt>
+  <dd><span>Global attributes</span></dd>
+  <dt><span>DOM interface:</span></dt>
+  <dd>Uses <code>HTMLElement</code>.</dd>
+</dl>
 <p>medgam as a stylized reference marker -has complex scope, needs subtags to mark boundaries</p>
+<p>A <code><a data-link-type="element" href="#elementdef-marker" id="ref-for-elementdef-marker-2">marker</a></code> element that is not a child of a <code><a data-link-type="element" href="#elementdef-chant" id="ref-for-elementdef-chant-12">chant</a></code> element <a data-link-type="dfn" href="https://www.w3.org/TR/html51/dom.html#represent" id="ref-for-represent-3">represents</a> the same thing as its children.</p>
 </section>
 
 <section>
-<h3 class="element-header" id="the-ntation-sereyu">The <dfn><code>sereyu</code></dfn> element</h3>
+<h3 class="element-header" id="the-medgam-element">The <dfn><code>medgam</code></dfn> element</h3>
+<dl class="element">
+  <dt><span>Categories:</span></dt>
+  <dd><span>None.</span></dd>
+  <dt><span>Contexts in which this element can be used:</span></dt>
+  <dd><span>As a child of a <code><a data-link-type="element" href="#elementdef-chant" id="ref-for-elementdef-chant-11">chant</a></code> element.</span></dd>
+  <dt><span>Content model:</span></dt>
+  <dd><span>Phrasing content</span></dd>
+  <dt><span>Content attributes:</span></dt>
+  <dd><span>Global attributes</span></dd>
+  <dt><span>DOM interface:</span></dt>
+  <dd>Uses <code>HTMLElement</code>.</dd>
+</dl>
+<p>medgam as a stylized reference marker -has complex scope, needs subtags to mark boundaries</p>
+<p>A <code><a data-link-type="element" href="#elementdef-medgam" id="ref-for-elementdef-medgam-3">medgam</a></code> element that is not a child of a <code><a data-link-type="element" href="#elementdef-chant" id="ref-for-elementdef-chant-12">chant</a></code> element <a data-link-type="dfn" href="https://www.w3.org/TR/html51/dom.html#represent" id="ref-for-represent-3">represents</a> the same thing as its children.</p>
+</section>
+
+<section>
+<h3 class="element-header" id="the-sereyu-element">The <dfn><code>sereyu</code></dfn> element</h3>
+<dl class="element">
+  <dt><span>Categories:</span></dt>
+  <dd><span>None.</span></dd>
+  <dt><span>Contexts in which this element can be used:</span></dt>
+  <dd><span>As a child of a <code><a data-link-type="element" href="#elementdef-chant" id="ref-for-elementdef-chant-13">chant</a></code> element.</span></dd>
+  <dt><span>Content model:</span></dt>
+  <dd><span>Phrasing content</span></dd>
+  <dt><span>Content attributes:</span></dt>
+  <dd><span>Global attributes</span></dd>
+  <dt><span>DOM interface:</span></dt>
+  <dd>Uses <code>HTMLElement</code>.</dd>
+</dl>
 <p>sereyu as a definition marker, like &lt;dfn&gt; -has complex scope, needs subtags to mark boundaries</p>
+<p>An <code><a data-link-type="element" href="#elementdef-sereyu" id="ref-for-elementdef-sereyu-2">sereyu</a></code> element that is not a child of a <code><a data-link-type="element" href="#elementdef-chant" id="ref-for-elementdef-chant-14">chant</a></code> element <a data-link-type="dfn" href="https://www.w3.org/TR/html51/dom.html#represent" id="ref-for-represent-3">represents</a> the same thing as its children.</p>
 </section>
 
 <section>
-<h3 class="element-header" id="the-ntation-haleita">The <dfn><code>haleita</code></dfn> element</h3>
+<h3 class="element-header" id="the-haleita-element">The <dfn><code>haleita</code></dfn> element</h3>
+<dl class="element">
+  <dt><span>Categories:</span></dt>
+  <dd><span>None.</span></dd>
+  <dt><span>Contexts in which this element can be used:</span></dt>
+  <dd><span>As a child of a <code><a data-link-type="element" href="#elementdef-chant" id="ref-for-elementdef-chant-15">chant</a></code> element.</span></dd>
+  <dt><span>Content model:</span></dt>
+  <dd><span>Phrasing content</span></dd>
+  <dt><span>Content attributes:</span></dt>
+  <dd><span>Global attributes</span></dd>
+  <dt><span>DOM interface:</span></dt>
+  <dd>Uses <code>HTMLElement</code>.</dd>
+</dl>
 <p>haleita as a stylized reference marker -is &lt;a href="" ... &gt; suitable?</p>
+<p>An <code><a data-link-type="element" href="#elementdef-haleita" id="ref-for-elementdef-haleita-2">haleita</a></code> element that is not a child of a <code><a data-link-type="element" href="#elementdef-chant" id="ref-for-elementdef-chant-16">chant</a></code> element <a data-link-type="dfn" href="https://www.w3.org/TR/html51/dom.html#represent" id="ref-for-represent-3">represents</a> the same thing as its children.</p>
 </section>
 </em>
 
@@ -421,7 +530,7 @@ it does not <a data-link-type="dfn" href="https://www.w3.org/TR/html51/dom.html#
     <group><cbase>ከ</cbase><notation>᎑</notation><cbase>መ</cbase><notation>፡</notation></group>
     <group><cbase>ከ</cbase><notation>ቡር</notation><cbase>መ</cbase><notation>᎖᎔</notation></group>
   </notationGroup>
-  ፡<cbase>ር</cbase><notation>᎔</notation>ግብ፡<cbase>ወ</cbase><notation>᎑</notation>ረ<cbase>ደ</cbase><notation>ሉ᎙</notation>፡ክ<br/>
+  ፡<cbase>ር</cbase><notation>᎔</notation>ግብ፡<cbase>ወ</cbase><notation>᎑</notation>ረ<cbase>ደ</cbase><notation>ሉ᎙</notation>፡ክ</medgam><br/>
     ማ<cbase>ሁ</cbase><notation>ወቃ</notation>፡ኮ<cbase>ነ</cbase><notation>᎐</notation>፡በቢታን<cbase>ያ</cbase><notation>ር</notation>፡ደ<cbase>ጋ</cbase><notation>ሊ</notation>፡ወ<cbase>ድ</cbase><notation>ሊ </notation>ድቅ<cbase>ስ</cbase><notation>ዋ᎙</notation>፡ዘፈ<br/>
     የ<cbase>ሱ</cbase><notation>᎓</notation><cbase>ስ</cbase><notation>ሠ</notation>፡ክርስ<cbase>ቶ</cbase><notation>ሊ </notation>ስ፡<cbase>ኮ</cbase><notation>᎖</notation><cbase>ነ</cbase><notation>ነቢ </notation>፡እስ<cbase>መ</cbase><notation>ከመ</notation>፡እም<cbase>ተ</cbase><notation>᎖</notation><cbase>ረ</cbase><notation>᎘</notation>ፈ፡<br/>
   </beit>
