--- a/zaima/WhatIsZaima.html
+++ b/zaima/WhatIsZaima.html
@@ -168,11 +168,6 @@ rt.sereyu { color: #daa520; }
   used universally, many miliket are applicable only to a single volume of hymns.</p>
   </section>
   <section>
-  <h3 id="sereyu"><a href="#sereyu">Sereyu (ሥረዩ)</a></h3>
-  <p><em>Sereyu</em> marks a word in the base hymn as a reference point to define the vocalization of a miliket. The Sereyu point is marked with the
-abbreviation &ldquo;ረዩ&rdquo; or &lsquo;ዩ&rsquo; and appears in the interlinear notation along with miliket and qirts but is never vocalized.</p>
-  </section>
-  <section>
   <h3 id="beit"><a href="#beit">Beit (ቤት)</a></h3>
   <p>Literally meaning &ldquo;house&rdquo; the beit are abbreviations similar to the miliket that appear in left side margin notes that indicate
   a <a href="#selt">mode</a> subcategory or &ldquo;family&rdquo; that the zaima&rsquo;s chant melody belongs to at a particular section.
@@ -183,9 +178,10 @@ abbreviation &ldquo;ረዩ&rdquo; or &lsquo;ዩ&rsquo; and appears in the interl
   <h3 id="megdam"><a href="#megdam">Medgam (መድጋም)</a></h3>
   <p><em>Medgam</em> are Ethiopic numerals that appear in left side margin notes and signal that the line they are written adjacent to should be repeated
      (in accordance with the numeral&rsquo;s value). When a medgam number is present, the verse it applies to is first performed in vocal chant
-     only following the lowest line of notation (this is known as <dfn>Qome Zaima</dfn>.  Incremental passes will follow successive lines upward
+     only following the lowest line of notation (this is known as <dfn>Qome Zaima</dfn>).  Incremental passes will follow successive lines upward
      and will likely be accompanied by the instruments sistrum and drum.  Unlike Beit, the medgam number may be rendered in a smaller point size
-     (50% regular height as with the miliket).</p>
+     (50-70% regular height as with the miliket). [<em>Vet this, medgam may also, or primarily, represent alternative vocalizations</em>] More than
+     one medgam may apply to a line of chant, which each medgam applies to separate groupings of interlinear lines but all within the same <a href="#selt">mode.</a></p>
   </section>
   <section>
   <h3 id="haleita"><a href="#haleita">Halleluya Numbers (ሃሌታ)</a></h3>
@@ -193,6 +189,12 @@ abbreviation &ldquo;ረዩ&rdquo; or &lsquo;ዩ&rsquo; and appears in the interl
    &ldquo;haleita table&rdquo; (<em>አንቀጸ፡ሃሌታ፡</em>) which indicates how the halleluya melody should be sung (and in turn may include one or more notaion rows).
    The system is similar to miliket referencing and is grounded in a <a href="#beit">Beit</a> context.
   </p>
+  <section>
+  <h3 id="sereyu"><a href="#sereyu">Sereyu (ሥረዩ)</a></h3>
+  <p><em>Sereyu</em> marks a word in the base hymn as a reference point to identify the authoritative exemplar for the vocalization of a miliket or a
+  beit. For miliket, the Sereyu point is marked with the abbreviation &ldquo;ረዩ&rdquo; and appears in the interlinear notation along with miliket and qirts but is never itself vocalized. For beit, the Sereyu point is marked with the abbreviation &lsquo;ዩ&rsquo; and appears in the left side margin just as
+  a beit would be.
+  </section>
   </section>
 
   <section>
